--- a/index.html
+++ b/index.html
@@ -134,6 +134,54 @@
               />
               <h3 class="team-member member">Игорь Демьяненко</h3>
               <p lang="en" class="team-member position">Product Designer</p>
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://instagram.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Instagram"
+                  >
+                    <svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Twitter"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Facebook"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Linkedin"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -144,6 +192,54 @@
               />
               <h3 class="team-member member">Ольга Репина</h3>
               <p lang="en" class="team-member position">Frontend Developer</p>
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://instagram.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Instagram"
+                  >
+                    <svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Twitter"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Facebook"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Linkedin"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -154,6 +250,54 @@
               />
               <h3 class="team-member member">Николай Тарасов</h3>
               <p lang="en" class="team-member position">Marketing</p>
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://instagram.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Instagram"
+                  >
+                    <svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Twitter"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Facebook"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Linkedin"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
             </li>
             <li class="team-item">
               <img
@@ -164,6 +308,140 @@
               />
               <h3 class="team-member member">Михаил Ермаков</h3>
               <p lang="en" class="team-member position">UI Designer</p>
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://instagram.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Instagram"
+                  >
+                    <svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://twitter.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Twitter"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#twitter"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://facebook.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Facebook"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#facebook"></use></svg
+                  ></a>
+                </li>
+                <li class="social-icons-item">
+                  <a
+                    class="social-icons-link"
+                    href="httsp://linkedin.com/"
+                    target="_blank"
+                    rel="noopener noreferer"
+                    aria-label="Linkedin"
+                    ><svg class="social-icons-svg">
+                      <use href="./img/icons/sprite.svg#linkedin"></use></svg
+                  ></a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!--Наши клиенты-->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="list clients">
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients-item">
+              <a
+                class="clients-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Ya&Co"
+              >
+                <svg class="client-icons-svg">
+                  <use href="./img/icons/sprite.svg#client-6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -173,8 +451,7 @@
     <footer id="contacts" class="page-footer">
       <div class="container footer-container">
         <a href="./index.html" lang="en" class="logo footer-logo"
-          >Web<span class="logo-footer">Studio</span></a
-        >
+          >Web<span class="logo-footer">Studio</span></a>
         <address>
           <ul class="list footer-address">
             <li class="footer-item">
@@ -197,12 +474,65 @@
               <a
                 href="tel:+380991111111"
                 class="contact-footer link link-footer"
-                >+38 099 111 11 11</a
-              >
+                >+38 099 111 11 11</a>
             </li>
           </ul>
         </address>
       </div>
+      <!--соц сети-->
+     
+        <div class="foofer-social container">
+          <p>присоединяйтесь</p>
+          <ul class="list footer-social-icons">
+            <li class="footer-icons-item">
+              <a
+                class="footer-icons-link"
+                href="httsp://instagram.com/"
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Instagram"
+              >
+                <svg class="footer-icons-svg">
+                  <use href="./img/icons/sprite.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-icons-item">
+              <a
+                class="footer-icons-link"
+                href="httsp://twitter.com/"
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Twitter"
+                ><svg class="footer-icons-svg">
+                  <use href="./img/icons/sprite.svg#twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-icons-item">
+              <a
+                class="footer-icons-link"
+                href="httsp://facebook.com/"
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Facebook"
+                ><svg class="footer-icons-svg">
+                  <use href="./img/icons/sprite.svg#facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-icons-item">
+              <a
+                class="footer-icons-link"
+                href="httsp://linkedin.com/"
+                target="_blank"
+                rel="noopener noreferer"
+                aria-label="Linkedin"
+                ><svg class="footer-icons-svg">
+                  <use href="./img/icons/sprite.svg#linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </li>
     </footer>
   </body>
 </html>
