--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
           </ul>
         </nav>
         <div class="header-contact">
-          <a href="mailto:info@devstudio.com" class="link mail-link"
-            >info@devstudio.com</a
-          >
-          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+          <a href="mailto:info@devstudio.com" class="link header-link mail-link"
+            ><svg class="header-svg mail-svg"><use href="./img/icons/sprite.svg#mail"></use></svg>info@devstudio.com</a>
+          <a href="tel:+380961111111" class="link header-link"><svg class="header-svg phone-svg"><use href="./img/icons/sprite.svg#phone"></use></svg>+38 096 111 11 11</a>
         </div>
       </div>
     </header>
