--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
         </nav>
         <div class="header-contact">
           <a href="mailto:info@devstudio.com" class="link header-link mail-link"
-            ><svg class="header-svg mail-svg"><use href="./img/icons/sprite.svg#mail"></use></svg>info@devstudio.com</a>
-          <a href="tel:+380961111111" class="link header-link"><svg class="header-svg phone-svg"><use href="./img/icons/sprite.svg#phone"></use></svg>+38 096 111 11 11</a>
+            ><svg class="header-svg mail-svg">
+              <use href="./img/icons/sprite.svg#mail"></use></svg
+            >info@devstudio.com</a
+          >
+          <a href="tel:+380961111111" class="link header-link"
+            ><svg class="header-svg phone-svg">
+              <use href="./img/icons/sprite.svg#phone"></use></svg
+            >+38 096 111 11 11</a
+          >
         </div>
       </div>
     </header>
@@ -57,6 +64,11 @@
           <h2 class="section-title visually-hidden">Наши принципы работы</h2>
           <ul class="list work-principles">
             <li class="item-principles">
+              <div class="principles-icons">
+                <svg class="principles-icons-svg">
+                  <use href="./img/icons/sprite.svg#principle-attention"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Внимание к деталям</h3>
               <p class="item-description">
                 Идейные соображения, а также начало повседневной работы по
@@ -64,6 +76,13 @@
               </p>
             </li>
             <li class="item-principles">
+              <div class="principles-icons">
+                <svg class="principles-icons-svg">
+                  <use
+                    href="./img/icons/sprite.svg#principle-punctuality"
+                  ></use>
+                </svg>
+              </div>
               <h3 class="item-title">Пунктуальность</h3>
               <p class="item-description">
                 Задача организации, в особенности же рамки и место обучения
@@ -71,6 +90,11 @@
               </p>
             </li>
             <li class="item-principles">
+              <div class="principles-icons">
+                <svg class="principles-icons-svg">
+                  <use href="./img/icons/sprite.svg#principle-planning"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Планирование</h3>
               <p class="item-description">
                 Равным образом консультация с широким активом в значительной
@@ -78,6 +102,11 @@
               </p>
             </li>
             <li class="item-principles">
+              <div class="principles-icons">
+                <svg class="principles-icons-svg">
+                  <use href="./img/icons/sprite.svg#principle-technology"></use>
+                </svg>
+              </div>
               <h3 class="item-title">Современные технологии</h3>
               <p class="item-description">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -372,7 +401,7 @@
                 rel="noopener noreferer"
                 aria-label="Ya&Co"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="44.27" height="49.23">
                   <use href="./img/icons/sprite.svg#client-1"></use>
                 </svg>
               </a>
@@ -383,9 +412,9 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferer"
-                aria-label="Ya&Co"
+                aria-label="Tagline Here"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="40" height="52">
                   <use href="./img/icons/sprite.svg#client-2"></use>
                 </svg>
               </a>
@@ -396,9 +425,9 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferer"
-                aria-label="Ya&Co"
+                aria-label="Company"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="41" height="42.6">
                   <use href="./img/icons/sprite.svg#client-3"></use>
                 </svg>
               </a>
@@ -409,9 +438,9 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferer"
-                aria-label="Ya&Co"
+                aria-label="Foster Peters"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="79.66" height="42.02">
                   <use href="./img/icons/sprite.svg#client-4"></use>
                 </svg>
               </a>
@@ -422,9 +451,9 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferer"
-                aria-label="Ya&Co"
+                aria-label="Brand"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="59" height="47">
                   <use href="./img/icons/sprite.svg#client-5"></use>
                 </svg>
               </a>
@@ -435,9 +464,9 @@
                 href=""
                 target="_blank"
                 rel="noopener noreferer"
-                aria-label="Ya&Co"
+                aria-label="Company Tag Line"
               >
-                <svg class="client-icons-svg">
+                <svg class="client-icons-svg" width="88.48" height="45.44">
                   <use href="./img/icons/sprite.svg#client-6"></use>
                 </svg>
               </a>
@@ -448,40 +477,43 @@
     </main>
     <!--Подвал-->
     <footer id="contacts" class="page-footer">
-      <div class="container footer-container">
-        <a href="./index.html" lang="en" class="logo footer-logo"
-          >Web<span class="logo-footer">Studio</span></a>
-        <address>
-          <ul class="list footer-address">
-            <li class="footer-item">
-              <a
-                href="https://goo.gl/maps/CxbSxKR86c5XLmLp6"
-                target="_blank"
-                rel="noopener noreferer"
-                class="address-footer link link-footer"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li class="footer-item">
-              <a
-                href="mailto:info@example.com"
-                class="contact-footer link link-footer"
-                >info@example.com</a
-              >
-            </li>
-            <li>
-              <a
-                href="tel:+380991111111"
-                class="contact-footer link link-footer"
-                >+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
-      </div>
-      <!--соц сети-->
-     
-        <div class="foofer-social container">
-          <p>присоединяйтесь</p>
+      <div class="container footer">
+        <div class="footer-container">
+          <a href="./index.html" lang="en" class="logo footer-logo"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <address>
+            <ul class="list footer-address">
+              <li class="footer-item">
+                <a
+                  href="https://goo.gl/maps/CxbSxKR86c5XLmLp6"
+                  target="_blank"
+                  rel="noopener noreferer"
+                  class="address-footer link link-footer"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="footer-item">
+                <a
+                  href="mailto:info@example.com"
+                  class="contact-footer link link-footer"
+                  >info@example.com</a
+                >
+              </li>
+              <li>
+                <a
+                  href="tel:+380991111111"
+                  class="contact-footer link link-footer"
+                  >+38 099 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <!--соц сети-->
+        <div class="foofer-social">
+          <p class="footer-social-text">присоединяйтесь</p>
           <ul class="list footer-social-icons">
             <li class="footer-icons-item">
               <a
@@ -531,7 +563,7 @@
             </li>
           </ul>
         </div>
-      </li>
+      </div>
     </footer>
   </body>
 </html>
