--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         </nav>
         <div class="header-contact">
           <a href="mailto:info@devstudio.com" class="link header-link mail-link"
-            ><svg class="header-svg mail-svg">
+            ><svg class="header-svg">
               <use href="./img/icons/sprite.svg#mail"></use></svg
             >info@devstudio.com</a
           >
           <a href="tel:+380961111111" class="link header-link"
-            ><svg class="header-svg phone-svg">
+            ><svg class="header-svg">
               <use href="./img/icons/sprite.svg#phone"></use></svg
             >+38 096 111 11 11</a
           >
